tests/semantic/fact_number/fact_number.err
Error: Ambiguous constant (unable to deduce type) in file fact_number.dl at line 8
F(1000,"0002").
--^-------------
Error: Head argument is not a subtype of its declared type in file fact_number.dl at line 8
F(1000,"0002").
--^-------------
2 errors generated, evaluation aborted
